# claude-code-obsidian-hook

./: README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
scripts/: run_hook.sh
src/claude_obsidian_hook/: __init__.py  __main__.py  config.py  reflect.py  save.py  transcript.py
tests/: test_reflect.py  test_save.py  test_transcript.py
