[project]
name = "claude-code-obsidian-hook"
version = "0.1.0"
description = "Claude Code hook for Obsidian integration"
readme = "README.md"
authors = [
    { name = "Yoshihiko Kato", email = "raiden000discord@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest", "ruff"]

[project.scripts]
claude-obsidian-save = "claude_obsidian_hook.save:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_obsidian_hook"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
